--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -2,8 +2,8 @@
 <body>
 {{^user}}
 <form action="/login" method="post">
-    <input type="text" placeholder="Username" name="userName" required/>
-    <input type="password" placeholder="Password" name="password" required/>
+    <input type="text" placeholder="username" name="userName" required/>
+    <input type="password" placeholder="password" name="password" required/>
     <button type="submit">Login</button>
 </form>
 {{/user}}
